--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         .header h1 { font-size: 3rem; text-shadow: 0 0 20px #00ff88; margin-bottom: 10px; }
 
-        /* TABELA I STATYSTYKI */
+        /* TABELA I PODŚWIETLENIE PODIUM */
         .leaderboard {
             background: rgba(0, 0, 0, 0.8);
             border-radius: 15px;
@@ -40,63 +40,60 @@
             margin-bottom: 40px;
             border: 1px solid #00ff88;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            overflow-x: auto;
         }
 
-        table { width: 100%; border-collapse: collapse; }
+        table { width: 100%; border-collapse: collapse; min-width: 600px; }
         th, td { padding: 15px; text-align: left; border-bottom: 1px solid #333; }
-        th { text-transform: uppercase; color: #00ff88; letter-spacing: 1px; }
+        
+        .rank { font-weight: 900; font-size: 1.2rem; }
+        .rank-1 { color: #ffd700; text-shadow: 0 0 10px #ffd700; }
+        .rank-2 { color: #c0c0c0; text-shadow: 0 0 10px #c0c0c0; }
+        .rank-3 { color: #cd7f32; text-shadow: 0 0 10px #cd7f32; }
+
+        tr.top-1 { background: linear-gradient(90deg, rgba(255, 215, 0, 0.1) 0%, transparent 100%); border-left: 5px solid #ffd700; }
+        tr.top-2 { background: linear-gradient(90deg, rgba(192, 192, 192, 0.07) 0%, transparent 100%); border-left: 5px solid #c0c0c0; }
+        tr.top-3 { background: linear-gradient(90deg, rgba(205, 127, 50, 0.07) 0%, transparent 100%); border-left: 5px solid #cd7f32; }
 
         .player { display: flex; align-items: center; gap: 15px; }
         .player-head { width: 40px; height: 40px; border-radius: 8px; border: 2px solid #00ff88; }
         .time { font-family: 'Courier New', monospace; font-weight: 700; color: #00ff88; }
 
-        /* PODŚWIETLENIE PODIUM (ZŁOTO, SREBRO, BRĄZ) */
-        .rank { font-weight: 900; font-size: 1.2rem; }
-
-        /* 1 Miejsce */
-        .rank-1 { color: #ffd700; text-shadow: 0 0 10px #ffd700; }
-        tr.top-1 { 
-            background: linear-gradient(90deg, rgba(255, 215, 0, 0.15) 0%, transparent 100%); 
-            border-left: 5px solid #ffd700; 
-        }
-
-        /* 2 Miejsce */
-        .rank-2 { color: #c0c0c0; text-shadow: 0 0 10px #c0c0c0; }
-        tr.top-2 { 
-            background: linear-gradient(90deg, rgba(192, 192, 192, 0.1) 0%, transparent 100%); 
-            border-left: 5px solid #c0c0c0; 
-        }
-
-        /* 3 Miejsce */
-        .rank-3 { color: #cd7f32; text-shadow: 0 0 10px #cd7f32; }
-        tr.top-3 { 
-            background: linear-gradient(90deg, rgba(205, 127, 50, 0.1) 0%, transparent 100%); 
-            border-left: 5px solid #cd7f32; 
-        }
-
-        /* USUWANIE I FORMULARZ */
-        .delete-btn {
-            background: none; border: none; color: #ff4444;
-            cursor: pointer; font-size: 1.2rem; transition: 0.2s; opacity: 0.5;
-        }
-        .delete-btn:hover { transform: scale(1.3); color: #ff0000; opacity: 1; }
-
-        .form-section {
-            background: rgba(0, 0, 0, 0.8);
-            border-radius: 15px;
-            padding: 30px;
-            border: 1px solid #00ff88;
-        }
-
-        .form-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-bottom: 20px; }
+        /* FORMULARZ I STATY */
+        .form-section { background: rgba(0, 0, 0, 0.8); border-radius: 15px; padding: 30px; border: 1px solid #00ff88; }
+        .form-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px; margin-bottom: 20px; }
         input, select { padding: 12px; background: #000; border: 2px solid #333; color: #00ff88; border-radius: 8px; font-family: 'Orbitron'; }
         .submit-btn { width: 100%; padding: 15px; background: #00ff88; color: #000; font-weight: 700; border: none; border-radius: 10px; cursor: pointer; text-transform: uppercase; }
+        
+        .delete-btn { background: none; border: none; color: #ff4444; cursor: pointer; font-size: 1.2rem; opacity: 0.5; transition: 0.2s; }
+        .delete-btn:hover { opacity: 1; transform: scale(1.2); }
 
-        .stats { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; margin-bottom: 30px; }
+        .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 30px; }
         .stat-card { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; border: 1px solid #00ff88; text-align: center; }
+
+        /* MODAL HASŁA */
+        #passwordModal {
+            display: none; 
+            position: fixed; 
+            top: 0; left: 0; width: 100%; height: 100%; 
+            background: rgba(0,0,0,0.85); 
+            backdrop-filter: blur(5px);
+            z-index: 9999; 
+            justify-content: center; align-items: center;
+        }
+        .modal-content {
+            background: #111; 
+            padding: 40px; 
+            border: 2px solid #00ff88; 
+            border-radius: 20px; 
+            text-align: center; 
+            box-shadow: 0 0 40px rgba(0, 255, 136, 0.2);
+            width: 90%; max-width: 400px;
+        }
     </style>
 </head>
 <body>
+
     <div class="container">
         <div class="header">
             <h1>🏆 MINECRAFT SPEEDRUN</h1>
@@ -104,9 +101,9 @@
         </div>
 
         <div class="stats">
-            <div class="stat-card"> <div class="stat-value" id="totalRuns">0</div> <div class="stat-label">Total Runs</div> </div>
-            <div class="stat-card"> <div class="stat-value" id="bestTime">--:--:--</div> <div class="stat-label">World Record</div> </div>
-            <div class="stat-card"> <div class="stat-value" id="avgTime">--:--:--</div> <div class="stat-label">Average Time</div> </div>
+            <div class="stat-card"> <div id="totalRuns" style="font-size: 2rem; font-weight: 900;">0</div> <div>Total Runs</div> </div>
+            <div class="stat-card"> <div id="bestTime" style="font-size: 2rem; font-weight: 900; color: #ffd700;">--:--:--</div> <div>World Record</div> </div>
+            <div class="stat-card"> <div id="avgTime" style="font-size: 2rem; font-weight: 900; opacity: 0.8;">--:--:--</div> <div>Average Time</div> </div>
         </div>
 
         <div class="leaderboard">
@@ -125,21 +122,33 @@
         </div>
 
         <div class="form-section">
-            <h2>📝 Dodaj Wynik</h2>
+            <h2 style="margin-bottom: 20px; text-align: center;">📝 Dodaj Nowy Wynik</h2>
             <form id="speedrunForm">
                 <div class="form-grid">
                     <input type="text" id="playerName" placeholder="Nick gracza" required>
-                    <input type="number" id="hours" value="0" min="0" title="Godziny">
-                    <input type="number" id="minutes" placeholder="Minuty" min="0" max="59" required>
-                    <input type="number" id="seconds" placeholder="Sekundy" min="0" max="59" required>
+                    <input type="number" id="hours" value="0" min="0" placeholder="H">
+                    <input type="number" id="minutes" placeholder="Min" min="0" max="59" required>
+                    <input type="number" id="seconds" placeholder="Sek" min="0" max="59" required>
                     <select id="version" required>
                         <option value="1.16.1">1.16.1</option>
                         <option value="1.16.5">1.16.5</option>
                         <option value="1.20.1">1.20.1</option>
                     </select>
                 </div>
-                <button type="submit" class="submit-btn">🚀 Dodaj do tabeli</button>
+                <button type="submit" class="submit-btn">🚀 Wyślij wynik</button>
             </form>
+        </div>
+    </div>
+
+    <div id="passwordModal">
+        <div class="modal-content">
+            <h3 style="margin-bottom: 20px; color: #00ff88;">🔒 Autoryzacja Admina</h3>
+            <input type="password" id="modalPasswordInput" placeholder="Wpisz hasło..." 
+                   style="width: 100%; margin-bottom: 25px; text-align: center; font-size: 1.2rem; letter-spacing: 4px;">
+            <div style="display: flex; gap: 15px;">
+                <button id="confirmBtn" class="submit-btn" style="padding: 10px;">OK</button>
+                <button id="cancelBtn" class="submit-btn" style="padding: 10px; background: #333; color: #fff;">Anuluj</button>
+            </div>
         </div>
     </div>
 
@@ -150,6 +159,32 @@
 
         const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
         let speedruns = [];
+
+        // Funkcja obsługująca Modal zamiast Prompt
+        function getPassword() {
+            return new Promise((resolve) => {
+                const modal = document.getElementById('passwordModal');
+                const input = document.getElementById('modalPasswordInput');
+                const confirmBtn = document.getElementById('confirmBtn');
+                const cancelBtn = document.getElementById('cancelBtn');
+
+                modal.style.display = 'flex';
+                input.value = '';
+                input.focus();
+
+                const close = (val) => {
+                    modal.style.display = 'none';
+                    confirmBtn.onclick = null;
+                    cancelBtn.onclick = null;
+                    input.onkeydown = null;
+                    resolve(val);
+                };
+
+                confirmBtn.onclick = () => close(input.value);
+                cancelBtn.onclick = () => close(null);
+                input.onkeydown = (e) => { if(e.key === 'Enter') close(input.value); };
+            });
+        }
 
         function tToS(h, m, s) { return h * 3600 + m * 60 + s; }
         function sToT(ts) {
@@ -165,10 +200,11 @@
         }
 
         async function deleteRun(id) {
-            if (prompt("Hasło admina:") === ADMIN_PASSWORD) {
+            const pass = await getPassword();
+            if (pass === ADMIN_PASSWORD) {
                 const { error } = await _supabase.from('speedruns').delete().eq('id', id);
                 if (!error) fetchRuns();
-            } else { alert("Błędne hasło!"); }
+            } else if (pass !== null) { alert("❌ Błędne hasło!"); }
         }
 
         function render() {
@@ -178,16 +214,19 @@
 
             sorted.forEach((run, i) => {
                 const row = document.createElement('tr');
-                let rankCls = '';
-                if (i === 0) { rankCls = 'rank-1'; row.className = 'top-1'; }
-                else if (i === 1) { rankCls = 'rank-2'; row.className = 'top-2'; }
-                else if (i === 2) { rankCls = 'rank-3'; row.className = 'top-3'; }
+                let rCls = '';
+                if (i === 0) { rCls = 'rank-1'; row.className = 'top-1'; }
+                else if (i === 1) { rCls = 'rank-2'; row.className = 'top-2'; }
+                else if (i === 2) { rCls = 'rank-3'; row.className = 'top-3'; }
 
                 row.innerHTML = `
-                    <td><span class="rank ${rankCls}">${i + 1}</span></td>
-                    <td><div class="player"><img src="https://mc-heads.net/avatar/${run.name}/40" class="player-head"><span>${run.name}</span></div></td>
+                    <td><span class="rank ${rCls}">${i + 1}</span></td>
+                    <td><div class="player">
+                        <img src="https://mc-heads.net/avatar/${run.name}/40" class="player-head">
+                        <span>${run.name}</span>
+                    </div></td>
                     <td><span class="time">${sToT(tToS(run.hours, run.minutes, run.seconds))}</span></td>
-                    <td><span class="version">${run.version}</span></td>
+                    <td><span style="background:#222; padding:4px 10px; border-radius:15px; font-size:0.8rem;">${run.version}</span></td>
                     <td><button class="delete-btn" onclick="deleteRun(${run.id})">🗑️</button></td>
                 `;
                 tbody.appendChild(row);
@@ -203,7 +242,8 @@
 
         document.getElementById('speedrunForm').addEventListener('submit', async function(e) {
             e.preventDefault();
-            if (prompt("Hasło admina:") === ADMIN_PASSWORD) {
+            const pass = await getPassword();
+            if (pass === ADMIN_PASSWORD) {
                 const newRun = {
                     name: document.getElementById('playerName').value,
                     hours: parseInt(document.getElementById('hours').value) || 0,
@@ -213,7 +253,7 @@
                 };
                 const { error } = await _supabase.from('speedruns').insert([newRun]);
                 if (!error) { this.reset(); fetchRuns(); }
-            } else { alert("Błędne hasło!"); }
+            } else if (pass !== null) { alert("❌ Błędne hasło!"); }
         });
 
         fetchRuns();
