--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
             });
         }
 
-        function tToS(h, m, s) { return (parseInt(h) || 0) * 3600 + (parseInt(m) || 0) * 60 + (parseInt(s) || 0); }
-        function sToT(ts) {
-            const h = Math.floor(ts / 3600).toString().padStart(2, '0');
-            const m = Math.floor((ts % 3600) / 60).toString().padStart(2, '0');
-            const s = (ts % 60).toString().padStart(2, '0');
-            return `${h}:${m}:${s}`;
+        function tToS(h, m, s) { 
+    const hh = parseInt(h) || 0;
+    const mm = parseInt(m) || 0;
+    const ss = parseInt(s) || 0;
+    return hh * 3600 + mm * 60 + ss; 
+
         }
 
         async function fetchRuns() {
@@ -179,3 +179,4 @@
     </script>
 </body>
 </html>
+
