--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
         .delete-btn:hover { opacity: 1; transform: scale(1.2); }
         .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 30px; }
         .stat-card { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; border: 1px solid #00ff88; text-align: center; }
-        #passwordModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); backdrop-filter: blur(5px); z-index: 9999; justify-content: center; align-items: center; }
-        .modal-content { background: #111; padding: 40px; border: 2px solid #00ff88; border-radius: 20px; text-align: center; box-shadow: 0 0 40px rgba(0, 255, 136, 0.2); width: 90%; max-width: 400px; }
     </style>
 </head>
 <body>
@@ -74,117 +72,70 @@
             </form>
         </div>
     </div>
-    <div id="passwordModal">
-        <div class="modal-content">
-            <h3 style="margin-bottom: 20px; color: #00ff88;">🔒 Autoryzacja Admina</h3>
-            <input type="password" id="modalPasswordInput" placeholder="Wpisz hasło..." style="width: 100%; margin-bottom: 25px; text-align: center; font-size: 1.2rem; letter-spacing: 4px;">
-            <div style="display: flex; gap: 15px;">
-                <button id="confirmBtn" class="submit-btn" style="padding: 10px;">OK</button>
-                <button id="cancelBtn" class="submit-btn" style="padding: 10px; background: #333; color: #fff;">Anuluj</button>
-            </div>
-        </div>
-    </div>
     <script>
         const SUPABASE_URL = 'https://tedjwbyhwqakosdbaclu.supabase.co';
-const SUPABASE_KEY = 'sb_publishable_X8gSRqd8MHfgEvQNWkR9nA_1qVyBzB7';
+        const SUPABASE_KEY = 'sb_publishable_X8gSRqd8MHfgEvQNWkR9nA_1qVyBzB7';
+        const ADMIN_PASSWORD = "DZJAgNuTccieL1FG"; 
 
-// Zahashowane hasło w formacie Base64 (bezpieczniejsze przy kopiowaniu)
-const SECRET = "RlpKQWdOdVRjY2llTDFGRw==";
+        const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+        let speedruns = [];
 
-const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-let speedruns = [];
+        function tToS(h, m, s) { return (parseInt(h) || 0) * 3600 + (parseInt(m) || 0) * 60 + (parseInt(s) || 0); }
+        function sToT(ts) {
+            const h = Math.floor(ts / 3600).toString().padStart(2, '0');
+            const m = Math.floor((ts % 3600) / 60).toString().padStart(2, '0');
+            const s = (ts % 60).toString().padStart(2, '0');
+            return `${h}:${m}:${s}`;
+        }
 
-// Funkcja sprawdzająca hasło
-function verify(input) {
-    return btoa(input) === SECRET;
-}
+        async function fetchRuns() {
+            const { data, error } = await _supabase.from('speedruns').select('*');
+            if (!error) { speedruns = data || []; render(); }
+        }
 
-function getPassword() {
-    return new Promise((resolve) => {
-        const modal = document.getElementById('passwordModal');
-        const input = document.getElementById('modalPasswordInput');
-        const confirmBtn = document.getElementById('confirmBtn');
-        const cancelBtn = document.getElementById('cancelBtn');
-        modal.style.display = 'flex';
-        input.value = '';
-        input.focus();
-        const close = (val) => {
-            modal.style.display = 'none';
-            confirmBtn.onclick = null;
-            cancelBtn.onclick = null;
-            input.onkeydown = null;
-            resolve(val);
-        };
-        confirmBtn.onclick = () => close(input.value);
-        cancelBtn.onclick = () => close(null);
-        input.onkeydown = (e) => { if(e.key === 'Enter') close(input.value); };
-    });
-}
+        async function deleteRun(id) {
+            if (prompt("🔐 Hasło admina:") === ADMIN_PASSWORD) {
+                const { error } = await _supabase.from('speedruns').delete().eq('id', id);
+                if (!error) fetchRuns();
+            } else { alert("❌ Błędne hasło!"); }
+        }
 
-function tToS(h, m, s) { 
-    return (parseInt(h) || 0) * 3600 + (parseInt(m) || 0) * 60 + (parseInt(s) || 0); 
-}
+        function render() {
+            const tbody = document.getElementById('leaderboardBody');
+            tbody.innerHTML = '';
+            const sorted = [...speedruns].sort((a,b) => tToS(a.hours, a.minutes, a.seconds) - tToS(b.hours, b.minutes, b.seconds));
+            sorted.forEach((run, i) => {
+                const row = document.createElement('tr');
+                let rCls = '';
+                if (i === 0) { rCls = 'rank-1'; row.className = 'top-1'; }
+                else if (i === 1) { rCls = 'rank-2'; row.className = 'top-2'; }
+                else if (i === 2) { rCls = 'rank-3'; row.className = 'top-3'; }
+                row.innerHTML = `<td><span class="rank ${rCls}">${i + 1}</span></td><td><div class="player"><img src="https://mc-heads.net/avatar/${run.name}/40" class="player-head"><span>${run.name}</span></div></td><td><span class="time">${sToT(tToS(run.hours, run.minutes, run.seconds))}</span></td><td><span style="background:#222; padding:4px 10px; border-radius:15px; font-size:0.8rem;">${run.version}</span></td><td><button class="delete-btn" onclick="deleteRun(${run.id})">🗑️</button></td>`;
+                tbody.appendChild(row);
+            });
+            document.getElementById('totalRuns').textContent = speedruns.length;
+            if (speedruns.length > 0) {
+                const times = speedruns.map(r => tToS(r.hours, r.minutes, r.seconds));
+                document.getElementById('bestTime').textContent = sToT(Math.min(...times));
+                document.getElementById('avgTime').textContent = sToT(Math.floor(times.reduce((a,b)=>a+b,0)/speedruns.length));
+            }
+        }
 
-function sToT(ts) {
-    const h = Math.floor(ts / 3600).toString().padStart(2, '0');
-    const m = Math.floor((ts % 3600) / 60).toString().padStart(2, '0');
-    const s = (ts % 60).toString().padStart(2, '0');
-    return `${h}:${m}:${s}`;
-}
-
-async function fetchRuns() {
-    const { data, error } = await _supabase.from('speedruns').select('*');
-    if (!error) { speedruns = data || []; render(); }
-}
-
-async function deleteRun(id) {
-    const pass = await getPassword();
-    if (pass && verify(pass)) {
-        const { error } = await _supabase.from('speedruns').delete().eq('id', id);
-        if (!error) fetchRuns();
-    } else if (pass !== null) { alert("❌ Błędne hasło!"); }
-}
-
-function render() {
-    const tbody = document.getElementById('leaderboardBody');
-    tbody.innerHTML = '';
-    const sorted = [...speedruns].sort((a,b) => tToS(a.hours, a.minutes, a.seconds) - tToS(b.hours, b.minutes, b.seconds));
-    sorted.forEach((run, i) => {
-        const row = document.createElement('tr');
-        let rCls = '';
-        if (i === 0) { rCls = 'rank-1'; row.className = 'top-1'; }
-        else if (i === 1) { rCls = 'rank-2'; row.className = 'top-2'; }
-        else if (i === 2) { rCls = 'rank-3'; row.className = 'top-3'; }
-        row.innerHTML = `<td><span class="rank ${rCls}">${i + 1}</span></td><td><div class="player"><img src="https://mc-heads.net/avatar/${run.name}/40" class="player-head"><span>${run.name}</span></div></td><td><span class="time">${sToT(tToS(run.hours, run.minutes, run.seconds))}</span></td><td><span style="background:#222; padding:4px 10px; border-radius:15px; font-size:0.8rem;">${run.version}</span></td><td><button class="delete-btn" onclick="deleteRun(${run.id})">🗑️</button></td>`;
-        tbody.appendChild(row);
-    });
-    document.getElementById('totalRuns').textContent = speedruns.length;
-    if (speedruns.length > 0) {
-        const times = speedruns.map(r => tToS(r.hours, r.minutes, r.seconds));
-        document.getElementById('bestTime').textContent = sToT(Math.min(...times));
-        document.getElementById('avgTime').textContent = sToT(Math.floor(times.reduce((a,b)=>a+b,0)/speedruns.length));
-    }
-}
-
-document.getElementById('speedrunForm').addEventListener('submit', async function(e) {
-    e.preventDefault();
-    const pass = await getPassword();
-    if (pass && verify(pass)) {
-        const newRun = { 
-            name: document.getElementById('playerName').value, 
-            hours: parseInt(document.getElementById('hours').value) || 0, 
-            minutes: parseInt(document.getElementById('minutes').value), 
-            seconds: parseInt(document.getElementById('seconds').value), 
-            version: document.getElementById('version').value 
-        };
-        const { error } = await _supabase.from('speedruns').insert([newRun]);
-        if (!error) { this.reset(); fetchRuns(); }
-    } else if (pass !== null) { alert("❌ Błędne hasło!"); }
-});
-
-fetchRuns();
+        document.getElementById('speedrunForm').addEventListener('submit', async function(e) {
+            e.preventDefault();
+            if (prompt("🔐 Hasło admina:") === ADMIN_PASSWORD) {
+                const newRun = {
+                    name: document.getElementById('playerName').value,
+                    hours: parseInt(document.getElementById('hours').value) || 0,
+                    minutes: parseInt(document.getElementById('minutes').value),
+                    seconds: parseInt(document.getElementById('seconds').value),
+                    version: document.getElementById('version').value
+                };
+                const { error } = await _supabase.from('speedruns').insert([newRun]);
+                if (!error) { this.reset(); fetchRuns(); }
+            } else { alert("❌ Błędne hasło!"); }
+        });
+        fetchRuns();
     </script>
 </body>
 </html>
-
-
