--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         .container { max-width: 1200px; margin: 0 auto; }
         .header { text-align: center; margin-bottom: 40px; padding: 30px 0; background: linear-gradient(45deg, #000000, #1a1a1a); border-radius: 15px; border: 2px solid #00ff88; box-shadow: 0 0 30px rgba(0, 255, 136, 0.3); }
         .header h1 { font-size: 3rem; text-shadow: 0 0 20px #00ff88; margin-bottom: 10px; }
+        .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 30px; }
+        .stat-card { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; border: 1px solid #00ff88; text-align: center; }
         .leaderboard { background: rgba(0, 0, 0, 0.8); border-radius: 15px; padding: 30px; margin-bottom: 40px; border: 1px solid #00ff88; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); overflow-x: auto; }
         table { width: 100%; border-collapse: collapse; min-width: 600px; }
         th, td { padding: 15px; text-align: left; border-bottom: 1px solid #333; }
@@ -31,8 +33,10 @@
         .submit-btn { width: 100%; padding: 15px; background: #00ff88; color: #000; font-weight: 700; border: none; border-radius: 10px; cursor: pointer; text-transform: uppercase; }
         .delete-btn { background: none; border: none; color: #ff4444; cursor: pointer; font-size: 1.2rem; opacity: 0.5; transition: 0.2s; }
         .delete-btn:hover { opacity: 1; transform: scale(1.2); }
-        .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 30px; }
-        .stat-card { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; border: 1px solid #00ff88; text-align: center; }
+        
+        /* STYL MODALA */
+        #passwordModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); backdrop-filter: blur(5px); z-index: 9999; justify-content: center; align-items: center; }
+        .modal-content { background: #111; padding: 40px; border: 2px solid #00ff88; border-radius: 20px; text-align: center; box-shadow: 0 0 40px rgba(0, 255, 136, 0.2); width: 90%; max-width: 400px; }
     </style>
 </head>
 <body>
@@ -72,6 +76,18 @@
             </form>
         </div>
     </div>
+
+    <div id="passwordModal">
+        <div class="modal-content">
+            <h3 style="margin-bottom: 20px; color: #00ff88;">🔒 Autoryzacja Admina</h3>
+            <input type="password" id="modalPasswordInput" placeholder="Wpisz hasło..." style="width: 100%; margin-bottom: 25px; text-align: center; font-size: 1.2rem; letter-spacing: 4px;">
+            <div style="display: flex; gap: 15px;">
+                <button id="confirmBtn" class="submit-btn" style="padding: 10px;">OK</button>
+                <button id="cancelBtn" class="submit-btn" style="padding: 10px; background: #333; color: #fff;">Anuluj</button>
+            </div>
+        </div>
+    </div>
+
     <script>
         const SUPABASE_URL = 'https://tedjwbyhwqakosdbaclu.supabase.co';
         const SUPABASE_KEY = 'sb_publishable_X8gSRqd8MHfgEvQNWkR9nA_1qVyBzB7';
@@ -79,6 +95,32 @@
 
         const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
         let speedruns = [];
+
+        // FUNKCJA OBSŁUGUJĄCA MODAL
+        function getPassword() {
+            return new Promise((resolve) => {
+                const modal = document.getElementById('passwordModal');
+                const input = document.getElementById('modalPasswordInput');
+                const confirmBtn = document.getElementById('confirmBtn');
+                const cancelBtn = document.getElementById('cancelBtn');
+                
+                modal.style.display = 'flex';
+                input.value = '';
+                input.focus();
+
+                const close = (val) => {
+                    modal.style.display = 'none';
+                    confirmBtn.onclick = null;
+                    cancelBtn.onclick = null;
+                    input.onkeydown = null;
+                    resolve(val);
+                };
+
+                confirmBtn.onclick = () => close(input.value);
+                cancelBtn.onclick = () => { close(null); };
+                input.onkeydown = (e) => { if(e.key === 'Enter') close(input.value); };
+            });
+        }
 
         function tToS(h, m, s) { return (parseInt(h) || 0) * 3600 + (parseInt(m) || 0) * 60 + (parseInt(s) || 0); }
         function sToT(ts) {
@@ -94,10 +136,11 @@
         }
 
         async function deleteRun(id) {
-            if (prompt("🔐 Hasło admina:") === ADMIN_PASSWORD) {
+            const pass = await getPassword();
+            if (pass === ADMIN_PASSWORD) {
                 const { error } = await _supabase.from('speedruns').delete().eq('id', id);
                 if (!error) fetchRuns();
-            } else { alert("❌ Błędne hasło!"); }
+            } else if (pass !== null) { alert("❌ Błędne hasło!"); }
         }
 
         function render() {
@@ -123,7 +166,8 @@
 
         document.getElementById('speedrunForm').addEventListener('submit', async function(e) {
             e.preventDefault();
-            if (prompt("🔐 Hasło admina:") === ADMIN_PASSWORD) {
+            const pass = await getPassword();
+            if (pass === ADMIN_PASSWORD) {
                 const newRun = {
                     name: document.getElementById('playerName').value,
                     hours: parseInt(document.getElementById('hours').value) || 0,
@@ -133,7 +177,7 @@
                 };
                 const { error } = await _supabase.from('speedruns').insert([newRun]);
                 if (!error) { this.reset(); fetchRuns(); }
-            } else { alert("❌ Błędne hasło!"); }
+            } else if (pass !== null) { alert("❌ Błędne hasło!"); }
         });
         fetchRuns();
     </script>
