--- a/index.html
+++ b/index.html
@@ -93,10 +93,25 @@
     <script>
         const SUPABASE_URL = 'https://tedjwbyhwqakosdbaclu.supabase.co';
         const SUPABASE_KEY = 'sb_publishable_X8gSRqd8MHfgEvQNWkR9nA_1qVyBzB7';
-        const ADMIN_PASSWORD = "DZJAgNuTccieL1FG"; 
 
         const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
         let speedruns = [];
+
+        // FUNKCJA SPRAWDZAJĄCA HASŁO PRZEZ SERVERLESS API
+        async function verifyPasswordOnServer(input) {
+            try {
+                const response = await fetch('/api/check-password', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ password: input })
+                });
+                const result = await response.json();
+                return result.success;
+            } catch (e) {
+                console.error("Błąd serwera:", e);
+                return false;
+            }
+        }
 
         function getPassword() {
             return new Promise((resolve) => {
@@ -115,7 +130,7 @@
                     resolve(val);
                 };
                 confirmBtn.onclick = () => close(input.value);
-                cancelBtn.onclick = () => { close(null); };
+                cancelBtn.onclick = () => close(null);
                 input.onkeydown = (e) => { if(e.key === 'Enter') close(input.value); };
             });
         }
@@ -135,10 +150,10 @@
 
         async function deleteRun(id) {
             const pass = await getPassword();
-            if (pass === ADMIN_PASSWORD) {
+            if (pass && await verifyPasswordOnServer(pass)) {
                 const { error } = await _supabase.from('speedruns').delete().eq('id', id);
                 if (!error) fetchRuns();
-            } else if (pass !== null) { alert("❌ Błędne hasło!"); }
+            } else if (pass !== null) { alert("❌ Błędne hasło lub błąd serwera!"); }
         }
 
         function render() {
@@ -151,21 +166,8 @@
                 if (i === 0) { rCls = 'rank-1'; row.className = 'top-1'; }
                 else if (i === 1) { rCls = 'rank-2'; row.className = 'top-2'; }
                 else if (i === 2) { rCls = 'rank-3'; row.className = 'top-3'; }
-                
-                const videoIcon = run.video_url ? `<a href="${run.video_url}" target="_blank" class="video-link" title="Oglądaj nagranie">📺</a>` : '';
-
-                row.innerHTML = `
-                    <td><span class="rank ${rCls}">${i + 1}</span></td>
-                    <td><div class="player"><img src="https://mc-heads.net/avatar/${run.name}/40" class="player-head"><span>${run.name}</span></div></td>
-                    <td>
-                        <div class="time-box">
-                            <span class="time">${sToT(tToS(run.hours, run.minutes, run.seconds))}</span>
-                            ${videoIcon}
-                        </div>
-                    </td>
-                    <td><span style="background:#222; padding:4px 10px; border-radius:15px; font-size:0.8rem;">${run.version}</span></td>
-                    <td><button class="delete-btn" onclick="deleteRun(${run.id})">🗑️</button></td>
-                `;
+                const videoIcon = run.video_url ? `<a href="${run.video_url}" target="_blank" class="video-link">📺</a>` : '';
+                row.innerHTML = `<td><span class="rank ${rCls}">${i + 1}</span></td><td><div class="player"><img src="https://mc-heads.net/avatar/${run.name}/40" class="player-head"><span>${run.name}</span></div></td><td><div class="time-box"><span class="time">${sToT(tToS(run.hours, run.minutes, run.seconds))}</span>${videoIcon}</div></td><td><span style="background:#222; padding:4px 10px; border-radius:15px; font-size:0.8rem;">${run.version}</span></td><td><button class="delete-btn" onclick="deleteRun(${run.id})">🗑️</button></td>`;
                 tbody.appendChild(row);
             });
             document.getElementById('totalRuns').textContent = speedruns.length;
@@ -179,7 +181,7 @@
         document.getElementById('speedrunForm').addEventListener('submit', async function(e) {
             e.preventDefault();
             const pass = await getPassword();
-            if (pass === ADMIN_PASSWORD) {
+            if (pass && await verifyPasswordOnServer(pass)) {
                 const newRun = {
                     name: document.getElementById('playerName').value,
                     hours: parseInt(document.getElementById('hours').value) || 0,
