--- a/index.html
+++ b/index.html
@@ -67,12 +67,27 @@
         @keyframes shine { to { background-position: 200% center; } }
 
         /* HERO SECTION (PO PRAWEJ) */
-        .record-hero {
-            background: rgba(0,0,0,0.85); border: 2px solid #ffd700; border-radius: 20px;
-            padding: 40px 20px; text-align: center; position: sticky; top: 20px;
-            box-shadow: 0 0 40px rgba(255, 215, 0, 0.2); height: fit-content;
+       .record-hero {
+    background: rgba(0,0,0,0.85); 
+    border: 2px solid #ffd700; 
+    border-radius: 20px;
+    padding: 40px 20px; 
+    text-align: center; 
+    position: sticky; 
+    top: 20px;
+    box-shadow: 0 0 40px rgba(255, 215, 0, 0.2); 
+    height: fit-content;
+    
+    /* Flexbox do centrowania zawartości */
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
         }
-        .hero-skin { height: 380px; filter: drop-shadow(0 0 20px var(--primary)); margin: 25px 0; }
+        .hero-skin { 
+    height: 380px; 
+    filter: drop-shadow(0 0 20px var(--primary)); 
+    margin: 25px 0;
         .hero-name-tag {
             background: rgba(0,0,0,0.8); border: 2px solid #fff; padding: 6px 20px;
             display: inline-block; font-weight: bold; color: #fff; border-radius: 4px;
@@ -333,3 +348,4 @@
     </script>
 </body>
 </html>
+
