--- a/index.html
+++ b/index.html
@@ -161,16 +161,16 @@
             </div>
 
             <div id="heroBox" class="record-hero" style="display: none;">
-                <p style="letter-spacing: 4px; font-size: 0.7rem; color: #ffd700; font-weight: 900;">WORLD RECORD HOLDER</p>
-                <div style="margin-top: 30px;">
-                    <div id="hNameTag" class="hero-name-tag">---</div>
-                    <img id="hSkin" class="hero-skin" src="" alt="Skin">
-                </div>
-                <div class="hero-time" id="hTime">00:00:00.000</div>
-                <div id="hVer" style="opacity: 0.5; font-size: 0.8rem; margin-top: 10px;">Minecraft 1.16.1</div>
-                <div id="hSeed" style="font-size: 0.6rem; opacity: 0.3; margin-top: 10px; word-break: break-all;">SEED: ---</div>
-                <div class="glow-bar-subtle"></div>
-            </div>
+    <p style="letter-spacing: 4px; font-size: 0.7rem; color: #ffd700; font-weight: 900; margin-bottom: 20px;">WORLD RECORD HOLDER</p>
+    
+    <div id="hNameTag" class="hero-name-tag">---</div>
+    <img id="hSkin" class="hero-skin" src="" alt="Skin">
+    
+    <div class="hero-time" id="hTime">00:00:00.000</div>
+    <div id="hVer" style="opacity: 0.5; font-size: 0.8rem; margin-top: 10px;">Minecraft 1.16.1</div>
+    <div id="hSeed" style="font-size: 0.6rem; opacity: 0.3; margin-top: 10px; word-break: break-all;">SEED: ---</div>
+    <div class="glow-bar-subtle"></div>
+</div>
         </div>
     </div>
 
@@ -348,4 +348,5 @@
     </script>
 </body>
 </html>
+
 
