--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             render();
         }
 
-        function render() {
+       function render() {
             const tbody = document.getElementById('leaderboardBody');
             tbody.innerHTML = '';
             const bests = {};
@@ -228,7 +228,6 @@
                 document.getElementById('hVer').textContent = `Minecraft ${wr.version}`;
                 document.getElementById('hSeed').textContent = wr.seed ? `SEED: ${wr.seed}` : 'SEED: BRAK';
                 
-                // Uruchom animację tylko jeśli czas się zmienił lub to pierwsze ładowanie
                 if(wr.total !== wrTimeMs) {
                     wrTimeMs = wr.total;
                     animateTime(wr.total);
@@ -239,17 +238,30 @@
                 const row = document.createElement('tr');
                 let nCls = i === 0 ? 'nick-1' : '';
                 if(i < 3) row.classList.add(`top-${i+1}`);
+                
+                // Poprawiona komórka z czasem i seedem
                 row.innerHTML = `
                     <td><b>${i+1}</b></td>
-                    <td><img src="https://mc-heads.net/avatar/${run.name}/32" class="player-head"><span class="${nCls}">${run.name}</span> <span style="cursor:pointer;opacity:0.4;" onclick="showHistory('${run.name}')">ⓘ</span></td>
-                    <td><b style="font-family:'VT323',monospace; font-size:1.2rem;">${fmt(run.total)}</b></td>
+                    <td>
+                        <img src="https://mc-heads.net/avatar/${run.name}/32" class="player-head">
+                        <span class="${nCls}">${run.name}</span> 
+                        <span style="cursor:pointer;opacity:0.4;margin-left:5px;" onclick="showHistory('${run.name}')">ⓘ</span>
+                    </td>
+                    <td>
+                        <div style="font-family:'VT323',monospace; font-size:1.3rem; line-height:1.1;">${fmt(run.total)}</div>
+                        <div style="font-size:0.65rem; opacity:0.4; margin-top:2px; font-family:'Orbitron'; letter-spacing:1px;">
+                            ${run.seed ? run.seed : 'brak seeda'}
+                        </div>
+                    </td>
                     <td>${run.version}</td>
                     <td>
-                        <button onclick="downloadCard('${run.name}','${fmt(run.total)}',${i+1},'${run.version}')" style="background:none; border:none; cursor:pointer;">🗺️</button>
-                        <button onclick="delRun(${run.id})" style="background:none; border:none; cursor:pointer; margin-left:10px;">🧨</button>
+                        <button onclick="downloadCard('${run.name}','${fmt(run.total)}',${i+1},'${run.version}')" style="background:none; border:none; cursor:pointer; font-size:1.2rem;">🗺️</button>
+                        <button onclick="delRun(${run.id})" style="background:none; border:none; cursor:pointer; margin-left:10px; font-size:1.2rem; opacity:0.6;">🧨</button>
                     </td>
                 `;
                 tbody.appendChild(row);
+            });
+        }
             });
         }
 
@@ -336,3 +348,4 @@
     </script>
 </body>
 </html>
+
